Fix pixel-shift problem when hovering
- Borders and outlines are now properly set

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -4,8 +4,9 @@
     gap: .5rem;
     position: relative;
     text-align: center;
-    border: 1px dashed var(--stroke-default);
+    border: 2px dashed transparent;
     border-radius: .25rem;
+    outline: 1px dashed var(--stroke-default);
     padding: 1.75rem 1rem;
 
     & input {
@@ -21,8 +22,8 @@
     }
 
     &:hover, &:has(input:focus) {
+        outline-width: 0;
         background-color: var(--surface-secondary);
-        border-width: 2px;
         border-color: var(--stroke-highlight);
 
         & p {
