--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -1,9 +1,12 @@
-input, textarea, select {
+input, 
+textarea, 
+select {
     appearance: none;
     width: 100%;
     font: var(--text);
+    border: 2px solid transparent;
     border-radius: .5rem;
-    border: 1px solid var(--stroke-default);
+    outline: 1px solid var(--stroke-default);
     padding: .75rem 1rem;
 }
 
@@ -19,7 +22,7 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
     outline: .25rem solid var(--surface-secondary);
-    border: .125rem solid var(--stroke-highlight);
+    border-color: var(--stroke-highlight);
     outline-offset: .1px;
 }
 
